# smart-course-planner

./: README.md
api/: .gitignore  CMakeLists.txt  README.md
api/include/SchedulePlanner/: Course.h  Schedule.h  Scheduler.h  Timeslot.h
api/src/: CMakeLists.txt  Course.cpp  Schedule.cpp  Scheduler.cpp  Timeslot.cpp  main.cpp
api/test/: CMakeLists.txt  CourseTest.cpp  ScheduleTest.cpp  SchedulerTest.cpp  TimeslotTest.cpp
web/: README.md  package-lock.json  package.json  tailwind.config.js
web/public/: index.html
web/src/: App.tsx  index.css
web/src/components/constants/: courseColors.ts
web/src/components/course/: CourseItem.tsx  CourseList.tsx  CourseMenu.tsx  CourseSectionItem.tsx  CourseSectionList.tsx  CourseSectionTable.tsx  CourseSectionTableHeader.tsx
web/src/components/nav/: Nav.tsx  NavItem.tsx
web/src/components/planner/: AddCourseForm.tsx  AddSectionForm.tsx  PlannerHeader.tsx
web/src/components/schedule/: Schedule.tsx  ScheduleFooter.tsx  ScheduleLayout.tsx
web/src/components/ui/: ColorPicker.tsx  DayPicker.tsx  Modal.tsx
web/src/data/: courses.ts
web/src/pages/: Home.tsx  Layout.tsx  Planner.tsx
web/src/redux/: coursesSlice.ts  plannerSlice.ts  store.ts
web/src/types/: Course.ts  Schedule.ts  Timeslot.ts
web/src/utils/: apiUtils.ts  courseUtils.ts  datetime.ts  scheduleUtils.ts
